app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: playground

spec:
  replicas: 1

  selector:
    matchLabels:
      app: playground

  template:
    metadata:
      labels:
        app: playground

    spec:
      containers:
      - name: playground
        image: uzyexe/tetris:latest
        ports:
        - containerPort: 80
